--- a/.env.example
+++ b/.env.example
@@ -20,21 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-<<<<<<< HEAD
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=PredatorGroup
 DB_USERNAME=root
 DB_PASSWORD=
-=======
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
->>>>>>> 0a0b0f5e852948a3bd0bc9ad9c3794c312c95a8b
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -72,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+# google auth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=http://localhost:8000/auth/google/callback
